# tstorgb

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: convert.py
src/: convert_rgb.py  montage.py  tsto_convert_rgb.py  tsto_montage.py
src/tsto_rgb_bsv3_converter/: parsers.py
src/tsto_rgb_bsv3_tools/: __init__.py
src/tstorgb/: __init__.py  convert.py  montage.py  parsers.py
src/tstorgb/accessories/: shadow.npy
src/tstorgb/parsers/: __init__.py  bcell.py  bsv3.py  rgb.py
src/tstorgb/parsers/addons/: bcell_addon.py  bsv3_addon.py
src/tstorgb/tools/: convert.py
