[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsto_rgb_bsv3_tools"
version = "0.0.1"
authors = [
  { name="al1sant0s", email="cnctalissonsantos@gmail.com" },
]
description = "Convert any rgb files from TSTO into proper images."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "wand"]

[project.urls]
Homepage = "https://github.com/al1sant0s/tsto_rgb_bsv3_tools"
Issues = "https://github.com/al1sant0s/tsto_rgb_bsv3_tools/issues"

[tool.hatch.build.targets.wheel.force-include]
examples = "tsto_rgb_bsv3_tools/examples"
