[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tstorgb"
version = "0.1.1"
authors = [
  { name="al1sant0s", email="cnctalissonsantos@gmail.com" },
]
description = "Convert any rgb files from The 'Simpsons: Tapped Out' game into proper images."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "pyvips"]

[project.scripts]
tstorgb = "tstorgb.tools.convert:main"

[project.urls]
Homepage = "https://github.com/al1sant0s/tstorgb"
Issues = "https://github.com/al1sant0s/tstorgb/issues"
